fixed scrollbar issue

--- a/app/assets/stylesheets/pages/_chatroom.scss
+++ b/app/assets/stylesheets/pages/_chatroom.scss
@@ -33,10 +33,6 @@
     padding: 1rem;
   }
 
-  #messages {
-    overflow: scroll;
-  }
-
   .new_message {
     border-top: 1px solid $gray-200;
     padding: 1rem;
